--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,78 +1,3 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -85,23 +10,88 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
   color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.df {
+  display: flex;
+}
+
+.ai-cntr {
+  align-items: center;
+}
+
+.loading {
+  pointer-events: none;
+  opacity: 0.6;
+}
+
+
+.mar-t-4 {
+  margin-top: 4px;
+}
+.mar-t-8 {
+  margin-top: 8px;
+}
+.mar-t-12 {
+  margin-top: 12px;
+}
+.mar-t-16 {
+  margin-top: 16px;
+}
+.mar-t-20 {
+  margin-top: 20px;
+}
+.mar-t-40 {
+  margin-top: 40px;
+}
+
+.mar-r-4 {
+  margin-right: 4px;
+}
+.mar-r-8 {
+  margin-right: 8px;
+}
+.mar-r-12 {
+  margin-right: 12px;
+}
+.mar-r-16 {
+  margin-right: 16px;
+}
+.mar-r-20 {
+  margin-right: 20px;
+}
+
+.mar-b-4 {
+  margin-bottom: 4px;
+}
+.mar-b-8 {
+  margin-bottom: 8px;
+}
+.mar-b-12 {
+  margin-bottom: 12px;
+}
+.mar-b-16 {
+  margin-bottom: 16px;
+}
+.mar-b-20 {
+  margin-bottom: 20px;
+}
+
+.mar-l-4 {
+  margin-left: 4px;
+}
+.mar-l-8 {
+  margin-left: 8px;
+}
+.mar-l-12 {
+  margin-left: 12px;
+}
+.mar-l-16 {
+  margin-left: 16px;
+}
+.mar-l-20 {
+  margin-left: 20px;
 }
